# pds

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  noxfile.py  pyproject.toml  pyrightconfig.json
pds/: __init__.py
pds/cli/: __init__.py  main.py  schema.py
pds/config/: __init__.py  models.py
pds/plugins/: __init__.py  base.py  digitalocean.py  manual.py
pds/schema/: __init__.py  cache.py  generator.py
pds/schema/api/: __init__.py  base.py  digitalocean.py
test-workspace/: pds.yaml
